# task-06---threads-Shirel01

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  Colors.h
src/: CMakeLists.txt  Colors.cpp  Consumer.cpp  Producer.cpp  main.cpp
